Fixed footer horizontal scroll

--- a/static/style.css
+++ b/static/style.css
@@ -271,7 +271,6 @@ footer a.active {
 }
 
 nav,
-footer,
 .container {
     width: 100%;
 }
